--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Patrick Ose Ehimen || We3 Developer</title>
+    <title>Patrick Ose Ehimen || We3 Dev</title>
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/2c36e9b7b1.js"
